corrected image overflow with 100% width/height

--- a/style.css
+++ b/style.css
@@ -110,6 +110,8 @@ img {
     mix-blend-mode: multiply;
     opacity: 0.8;
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 /************ Media Queries ********/
